@@ -368,9 +368,6 @@
     <ClInclude Include="MovedBlocks.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\SVN\SVNPatch.h">
-      <Filter>Source Files</Filter>
-    </ClInclude>
     <ClInclude Include="..\Utils\MiscUI\StandAloneDlg.h">
       <Filter>Utils\Header Files</Filter>
     </ClInclude>
@@ -418,6 +415,9 @@
     </ClInclude>
     <ClInclude Include="..\SVN\SVNGlobal.h">
       <Filter>Utils\Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\SVN\SVNPatch.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
